# recall

./: .env.example  .mcp.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml  release.yml
cli/: recall_cli.py  recall_mcp.py
commands/: save.md  update.md
hooks/: hooks.json  session-start.sh
memory_api/: auth.py  config.py  embeddings.py  main.py  models.py  store.py
skills/memory-management/: SKILL.md
tests/: test_cli.py  test_degraded.py  test_embeddings.py  test_integration.py  test_mcp.py  test_unit.py
