[project]
name = "recall-cli"
version = "0.3.3"
description = "A personal semantic memory system — store, search, and manage memories locally with vector embeddings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anel Canto", email = "anelcanto@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "qdrant-client",
    "httpx",
    "typer",
    "rich",
    "pydantic-settings",
    "python-dotenv",
    "mcp[cli]",
]

[project.urls]
Homepage = "https://github.com/anelcanto/recall"
Repository = "https://github.com/anelcanto/recall"
Issues = "https://github.com/anelcanto/recall/issues"

[project.scripts]
recall = "cli.recall_cli:app"
recall-mcp = "cli.recall_mcp:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.3.3"
commit = true
tag = true
commit_message = "chore: bump version to {new_version}"
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/marketplace.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.hatch.build.targets.wheel]
packages = ["memory_api", "cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter if needed
    "UP045",  # Optional[X] → X | None — cosmetic, widespread in codebase
]

[tool.ruff.lint.isort]
known-first-party = ["memory_api", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "bump-my-version",
    "pre-commit",
    "ruff>=0.15.4",
]
